@@ -1,3 +1,7 @@
+2022-03-23  Robby Stephenson  <robby@periapsis.org>
+
+	* Added screenshot field for MobyGames source.
+
 2022-03-22  Robby Stephenson  <robby@periapsis.org>
 
 	* Added screenshot field for TheGamesDB source.
